fixed after checking

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <a href="./index.html">Webstudio</a>
 
       <ul>
-        <li><a href="./index.html">Studio</a></li>
-        <li><a href="./index.html">Portfolio</a></li>
-        <li><a href="./index.html">Contacts</a></li>
+        <li><a href="">Studio</a></li>
+        <li><a href="">Portfolio</a></li>
+        <li><a href="">Contacts</a></li>
       </ul>
     </nav>
     <address>
@@ -29,13 +29,13 @@
   <main>
     <section>
       <h1>
-        Effective Solutions <br />
-        for Your Business
+        Effective Solutions for Your Business
       </h1>
       <button type="button">Order Service</button>
     </section>
 
     <section>
+      <h2>Hidden header</h2>
       <ul>
         <li>
           <h3>Strategy</h3>
@@ -71,13 +71,13 @@
       <h2>What are we doing</h2>
       <ul>
         <li>
-          <a href="./index.html"><img src="./images/monitor.jpg" alt="monitor" width="360" height="300" /></a>
+          <img src="./images/monitor.jpg" alt="monitor" width="360" height="300" />
         </li>
         <li>
-          <a href="./index.html"><img src="./images/chats.jpg" alt="chat" width="360" height="300" /></a>
+          <img src="./images/chats.jpg" alt="chat" width="360" height="300" />
         </li>
         <li>
-          <a href="./index.html"><img src="./images/phone.jpg" alt="phone" width="360" height="300" /></a>
+          <img src="./images/phone.jpg" alt="phone" width="360" height="300" />
         </li>
       </ul>
     </section>
